# ruva-browser

./: .gitattributes  .gitignore  LICENSE
.github/workflows/: build.yml
native/: Cargo.toml  app.manifest  build.rs  icon.rc  kernel32_extra.def
native/src/: linux_main.rs  main.rs  main_win.rs  main_win_chromium.rs
native/ui/: ntp.html  settings.html  setup.html  toolbar.html  toolbar_inject.js
packaging/: PKGBUILD  build-appimage.sh  installer.nsi  release.sh
