[package]
name = "ruva-browser"
version = "0.1.0"
edition = "2021"
description = "Ruva Browser"

[[bin]]
name = "ruva-browser"
path = "src/main.rs"

[dependencies]
tao = "0.32"
wry = "0.49"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
embed-resource = "3"
