[package]
name = "ruva-browser"
version = "0.2.0"
edition = "2021"
description = "Ruva Browser"

[[bin]]
name = "ruva-browser"
path = "src/main.rs"

[dependencies]
tao = "0.32"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
wry = "0.49"
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
chromiumoxide = { version = "0.9", features = ["fetcher", "zip8", "rustls"] }
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
futures = "0.3"

[build-dependencies]
embed-resource = "3"
